@@ -209,32 +209,32 @@ public class CronExpression implements Serializable, Cloneable {
     protected static final int YEAR = 6;
     protected static final int ALL_SPEC_INT = 99; // '*'
     protected static final int NO_SPEC_INT = 98; // '?'
-    protected static final Integer ALL_SPEC = new Integer(ALL_SPEC_INT);
-    protected static final Integer NO_SPEC = new Integer(NO_SPEC_INT);
+    protected static final Integer ALL_SPEC = Integer.valueOf(ALL_SPEC_INT);
+    protected static final Integer NO_SPEC = Integer.valueOf(NO_SPEC_INT);
     
     protected static final Map monthMap = new HashMap(20);
     protected static final Map dayMap = new HashMap(60);
     static {
-        monthMap.put("JAN", new Integer(0));
-        monthMap.put("FEB", new Integer(1));
-        monthMap.put("MAR", new Integer(2));
-        monthMap.put("APR", new Integer(3));
-        monthMap.put("MAY", new Integer(4));
-        monthMap.put("JUN", new Integer(5));
-        monthMap.put("JUL", new Integer(6));
-        monthMap.put("AUG", new Integer(7));
-        monthMap.put("SEP", new Integer(8));
-        monthMap.put("OCT", new Integer(9));
-        monthMap.put("NOV", new Integer(10));
-        monthMap.put("DEC", new Integer(11));
+        monthMap.put("JAN", Integer.valueOf(0));
+        monthMap.put("FEB", Integer.valueOf(1));
+        monthMap.put("MAR", Integer.valueOf(2));
+        monthMap.put("APR", Integer.valueOf(3));
+        monthMap.put("MAY", Integer.valueOf(4));
+        monthMap.put("JUN", Integer.valueOf(5));
+        monthMap.put("JUL", Integer.valueOf(6));
+        monthMap.put("AUG", Integer.valueOf(7));
+        monthMap.put("SEP", Integer.valueOf(8));
+        monthMap.put("OCT", Integer.valueOf(9));
+        monthMap.put("NOV", Integer.valueOf(10));
+        monthMap.put("DEC", Integer.valueOf(11));
 
-        dayMap.put("SUN", new Integer(1));
-        dayMap.put("MON", new Integer(2));
-        dayMap.put("TUE", new Integer(3));
-        dayMap.put("WED", new Integer(4));
-        dayMap.put("THU", new Integer(5));
-        dayMap.put("FRI", new Integer(6));
-        dayMap.put("SAT", new Integer(7));
+        dayMap.put("SUN", Integer.valueOf(1));
+        dayMap.put("MON", Integer.valueOf(2));
+        dayMap.put("TUE", Integer.valueOf(3));
+        dayMap.put("WED", Integer.valueOf(4));
+        dayMap.put("THU", Integer.valueOf(5));
+        dayMap.put("FRI", Integer.valueOf(6));
+        dayMap.put("SAT", Integer.valueOf(7));
     }
 
     private String cronExpression = null;
@@ -709,7 +709,7 @@ public class CronExpression implements Serializable, Cloneable {
                 throw new ParseException("'L' option is not valid here. (pos=" + i + ")", i);
             }
             TreeSet set = getSet(type);
-            set.add(new Integer(val));
+            set.add(Integer.valueOf(val));
             i++;
             return i;
         }
@@ -723,7 +723,7 @@ public class CronExpression implements Serializable, Cloneable {
             if(val > 31)
                 throw new ParseException("The 'W' option does not make sense with values larger than 31 (max number of days in a month)", i); 
             TreeSet set = getSet(type);
-            set.add(new Integer(val));
+            set.add(Integer.valueOf(val));
             i++;
             return i;
         }
@@ -745,7 +745,7 @@ public class CronExpression implements Serializable, Cloneable {
             }
 
             TreeSet set = getSet(type);
-            set.add(new Integer(val));
+            set.add(Integer.valueOf(val));
             i++;
             return i;
         }
@@ -968,7 +968,7 @@ public class CronExpression implements Serializable, Cloneable {
 
         if ((incr == 0 || incr == -1) && val != ALL_SPEC_INT) {
             if (val != -1) {
-                set.add(new Integer(val));
+                set.add(Integer.valueOf(val));
             } else {
                 set.add(NO_SPEC);
             }
@@ -1049,7 +1049,7 @@ public class CronExpression implements Serializable, Cloneable {
         for (int i = startAt; i <= stopAt; i += incr) {
             if (max == -1) {
                 // ie: there's no max to overflow over
-                set.add(new Integer(i));
+                set.add(Integer.valueOf(i));
             } else {
                 // take the modulus to get the real value
                 int i2 = i % max;
@@ -1059,7 +1059,7 @@ public class CronExpression implements Serializable, Cloneable {
                     i2 = max;
                 }
 
-                set.add(new Integer(i2));
+                set.add(Integer.valueOf(i2));
             }
         }
     }
@@ -1087,9 +1087,9 @@ public class CronExpression implements Serializable, Cloneable {
 
     protected ValueSet getValue(int v, String s, int i) {
         char c = s.charAt(i);
-        String s1 = String.valueOf(v);
+        StringBuilder s1 = new StringBuilder(String.valueOf(v));
         while (c >= '0' && c <= '9') {
-            s1 += c;
+            s1.append(c);
             i++;
             if (i >= s.length()) {
                 break;
@@ -1099,7 +1099,7 @@ public class CronExpression implements Serializable, Cloneable {
         ValueSet val = new ValueSet();
         
         val.pos = (i < s.length()) ? i : i + 1;
-        val.value = Integer.parseInt(s1);
+        val.value = Integer.parseInt(s1.toString());
         return val;
     }
 
@@ -1163,7 +1163,7 @@ public class CronExpression implements Serializable, Cloneable {
             int min = cl.get(Calendar.MINUTE);
 
             // get second.................................................
-            st = seconds.tailSet(new Integer(sec));
+            st = seconds.tailSet(Integer.valueOf(sec));
             if (st != null && st.size() != 0) {
                 sec = ((Integer) st.first()).intValue();
             } else {
@@ -1178,7 +1178,7 @@ public class CronExpression implements Serializable, Cloneable {
             t = -1;
 
             // get minute.................................................
-            st = minutes.tailSet(new Integer(min));
+            st = minutes.tailSet(Integer.valueOf(min));
             if (st != null && st.size() != 0) {
                 t = min;
                 min = ((Integer) st.first()).intValue();
@@ -1199,7 +1199,7 @@ public class CronExpression implements Serializable, Cloneable {
             t = -1;
 
             // get hour...................................................
-            st = hours.tailSet(new Integer(hr));
+            st = hours.tailSet(Integer.valueOf(hr));
             if (st != null && st.size() != 0) {
                 t = hr;
                 hr = ((Integer) st.first()).intValue();
@@ -1227,7 +1227,7 @@ public class CronExpression implements Serializable, Cloneable {
             boolean dayOfMSpec = !daysOfMonth.contains(NO_SPEC);
             boolean dayOfWSpec = !daysOfWeek.contains(NO_SPEC);
             if (dayOfMSpec && !dayOfWSpec) { // get day by day of month rule
-                st = daysOfMonth.tailSet(new Integer(day));
+                st = daysOfMonth.tailSet(Integer.valueOf(day));
                 if (lastdayOfMonth) {
                     if(!nearestWeekday) {
                         t = day;
@@ -1422,7 +1422,7 @@ public class CronExpression implements Serializable, Cloneable {
                     int cDow = cl.get(Calendar.DAY_OF_WEEK); // current d-o-w
                     int dow = ((Integer) daysOfWeek.first()).intValue(); // desired
                     // d-o-w
-                    st = daysOfWeek.tailSet(new Integer(cDow));
+                    st = daysOfWeek.tailSet(Integer.valueOf(cDow));
                     if (st != null && st.size() > 0) {
                         dow = ((Integer) st.first()).intValue();
                     }
@@ -1477,7 +1477,7 @@ public class CronExpression implements Serializable, Cloneable {
             }
 
             // get month...................................................
-            st = months.tailSet(new Integer(mon));
+            st = months.tailSet(Integer.valueOf(mon));
             if (st != null && st.size() != 0) {
                 t = mon;
                 mon = ((Integer) st.first()).intValue();
@@ -1504,7 +1504,7 @@ public class CronExpression implements Serializable, Cloneable {
             t = -1;
 
             // get year...................................................
-            st = years.tailSet(new Integer(year));
+            st = years.tailSet(Integer.valueOf(year));
             if (st != null && st.size() != 0) {
                 t = year;
                 year = ((Integer) st.first()).intValue();
